[gd_scene load_steps=8 format=2]

[ext_resource path="res://4 - Resources/DungeonFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://4 - Resources/UI/buildings.tres" type="Texture" id=2]
[ext_resource path="res://4 - Resources/UI/defenses.tres" type="Texture" id=3]
[ext_resource path="res://4 - Resources/UI/buildingspressed.tres" type="Texture" id=4]
[ext_resource path="res://2 - Scripts/UI/PurchaseMenu.gd" type="Script" id=5]
[ext_resource path="res://4 - Resources/UI/defensespressed.tres" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 31
font_data = ExtResource( 1 )

[node name="PurchaseMenu" type="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -440.0
margin_top = -130.0
margin_right = 440.0
script = ExtResource( 5 )

[node name="PlacingContainer" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -336.0
margin_top = -196.0
margin_right = 336.0
margin_bottom = -127.0
grow_horizontal = 2

[node name="ColorRect" type="ColorRect" parent="PlacingContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.196078, 0.196078, 0.196078, 0.941176 )

[node name="HBox" type="HBoxContainer" parent="PlacingContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -10.0
grow_horizontal = 2
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 14
alignment = 1

[node name="Label" type="Label" parent="PlacingContainer/ColorRect/HBox"]
margin_left = 211.0
margin_right = 461.0
margin_bottom = 64.0
rect_min_size = Vector2( 88, 64 )
size_flags_vertical = 1
text = "Placing Hut:"
valign = 1

[node name="ColorRect" type="ColorRect" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -65.0
margin_right = 2.0
margin_bottom = 65.0
color = Color( 0.196078, 0.196078, 0.196078, 0.941176 )

[node name="SelectedButtonRect" type="ColorRect" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -65.0
margin_right = 2.0
color = Color( 0.172549, 0.164706, 0.196078, 1 )

[node name="Buildings" type="ItemList" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -440.0
margin_top = -130.0
margin_right = 440.0
custom_fonts/font = SubResource( 1 )
max_columns = 0
fixed_column_width = 160
icon_mode = 0
icon_scale = 5.0

[node name="Defenses" type="ItemList" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -440.0
margin_top = -130.0
margin_right = 440.0
custom_fonts/font = SubResource( 1 )
max_columns = 0
fixed_column_width = 160
icon_mode = 0
icon_scale = 5.0

[node name="TabButtons" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -61.0
margin_bottom = 61.0
custom_constants/separation = 10

[node name="BuildingButton" type="TextureButton" parent="TabButtons"]
margin_right = 64.0
margin_bottom = 56.0
rect_min_size = Vector2( 56, 56 )
hint_tooltip = "Buildings"
disabled = true
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 4 )
expand = true
stretch_mode = 4

[node name="DefensesButton" type="TextureButton" parent="TabButtons"]
margin_top = 66.0
margin_right = 64.0
margin_bottom = 122.0
rect_min_size = Vector2( 56, 56 )
hint_tooltip = "Defenses"
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 6 )
expand = true
stretch_mode = 4

[connection signal="item_selected" from="Buildings" to="." method="_on_building_selected"]
[connection signal="item_selected" from="Defenses" to="." method="_on_building_selected"]
